--- a/src/CSS/Style.css
+++ b/src/CSS/Style.css
@@ -2,14 +2,20 @@
 *{
    font-family: 'Poppins', sans-serif;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
 html {
     font-size: 10px;
 }
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
     }
+}
+.login{
+    height: 100vh;
 }
 .loginBtn {
     /*background: #fff;*/
@@ -20,6 +26,18 @@ html {
     cursor: pointer;
     padding: 10px 30px;
     font-size: 16px;
+    font-weight: 500;
+}
+.successBtn {
+    /*background: #fff;*/
+    background: #42ba96;
+    /*color: #333;*/
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding-top: 5px;
+    padding: 1px 30px;
+    font-size: 30px;
     font-weight: 500;
 }
 .signUpBtn {
@@ -302,7 +320,9 @@ form input{
 }
 .cardBox .card .cardName{
     color:#999;
+    font-size:1.5em;
     transition:0.5s;
+    text-transform: capitalize;
 }
 .cardBox .card .cardIcon{
     font-size:2.5em;
@@ -419,9 +439,9 @@ table .content:hover {
     /*border:1px solid #03a9f4;*/
 }
 .selectAll{
-    width: 90%;
-    margin-top: 50px;
+    width: 85%;
+    margin-top: 20px;
 }
 .selectAll table{
-    margin-top: 50px;
+    margin-top: 20px;
 }
